--- a/Train_and_Creation_of_Model.ipynb
+++ b/Train_and_Creation_of_Model.ipynb
@@ -609,7 +609,7 @@
         "plot_loss(train_loss_avg,test_loss_avg,len(train_loss_avg))\n",
         "plot_accuracy(train_accuracy,test_accuracy,len(train_accuracy))\n",
         "print(confusion_matrix(true,pred))\n",
-        "# print_confusion_matrix(true,pred)"
+        "print_confusion_matrix(true,pred)"
       ],
       "metadata": {
         "id": "GpuwBKNIBIRZ"
